# ZDMR

./: README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: windows-installer-release.yml
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  error.rs  events.rs  lib.rs  model.rs  ui_bridge.rs
src-tauri/src/engine/: bandwidth.rs  file_writer.rs  job.rs  mod.rs  naming.rs
src-tauri/src/local_api/: mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/transport/: mod.rs
