[package]
name = "app"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
bytes = "1"
dashmap = "6"
futures-util = "0.3"
globset = "0.4"
log = "0.4"
mime_guess = "2"
parking_lot = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
sanitize-filename = "0.6"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# SQLite persistence. `bundled` keeps local dev friction low across platforms.
rusqlite = { version = "0.32", features = ["bundled"] }
